--- a/writeup.ipynb
+++ b/writeup.ipynb
@@ -146,8 +146,8 @@
     "\n",
     "| Image\t\t\t        |     Prediction\t        \t\t\t\t\t|\n",
     "|:---------------------:|:---------------------------------------------:|\n",
-    "| 60km/h      \t\t    | Turn right ahead   \t                        |\n",
-    "| Stop     \t\t\t    | Road work \t\t\t\t\t\t\t\t\t|\n",
+    "| 60km/h      \t\t    | Go straight or right   \t                    |\n",
+    "| Stop     \t\t\t    | Bumpy road\t\t\t\t\t\t\t\t\t|\n",
     "| Shared use path\t\t| Roundabout mandatory\t\t\t\t\t\t    |\n",
     "| Yield\t      \t\t    | Yield\t\t\t\t\t \t\t\t\t        |\n",
     "| Priority road\t\t\t| Priority road      \t\t\t\t\t\t\t|\n",
